[package]
name = "windows-ext-icons"
version = "0.1.0"
authors = ["FyrGlow"]
edition = "2021"
description = "Extract icons from Windows in different view modes as images."
license = "MIT"
repository = "https://github.com/FyrGlow/windows-ext-icons"

[dependencies]
image = "0.25.4"

[dependencies.windows]
version = "=0.58.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
]